@@ -1,3 +1,7 @@
+2001-06-23  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* Makefile.am: Prefix scoredir with $(DESTDIR).
+	
 2001-06-09  Juan Pablo Mendoza <pablo_juan@yahoo.com>
 
 	* Makefile.am, gnotski.c: Move the image file to $(datadir)/pixmaps.
